09/08/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_findlib.ml:    removed
	* batlib_persistent.ml: [Batlib_Extlib_PMap] added
	* batlib_mutable.ml:    [Batlib_Baselib_ArrayLabels] added
	* odoc_generator_batlib.ml: [root] become [roots] (and becomes a list)
	* odoc_generator_batlib.ml: [is_reachable_from_root] now a full method
	* odoc_generator_batlib.ml: [generate_modules_index] uses [is_reachable_from_root]
	* odoc_generator_batlib.ml: [html_of_Module_list] uses [is_reachable_from_root]
	* batlib_Extlib_Hashtbl.mli: added [S], [HashedType], [Make] 
	* batlib_Extlib_List.ml: added [make_compare], [of_backwards], [backwards], [drop_while], [take_while], 
	[split_at], [assoc_inv], [rindex_ofq], [rindex_of], [index_ofq], [index_of], [find_map], [find_exn], 
	[rev_map2], [@], [at], [cons], [is_empty]
	* batlib_Extlib_Hashtbl.mli: documented
	* batlib_Extlib_List.mli: documented
	* batlib_Extlib_Enum.mli: added alias ['a t = 'a Enum.t]
	* batlib_Extlib_BitSet.mli: added alias ['a t = 'a BitSet.t]
	* batlib_Extlib_Dllist.mli: added alias ['a t = 'a Dllist.t]
	* batlib_Extlib_Dynarray.mli: added alias ['a t = 'a DynArray.t]
	* batlib_Extlib_Global.mli: added alias ['a t = 'a Global.t]
	* batlib_Extlib_OptParse.mli: added alias ['a Opt.t = 'a Opt.OptParse.t], [Formatter.t = OptParse.Formatter.t],
	[OptParser.t = OptParse.OptParser.t], [OptParser.group = OptParse.OptParser.group]
	* batlib_Extlib_PMap.mli: added alias [t = PMap.t]
	* batlib_Extlib_RefList.mli: added alias [t = RefList.t]
	* batlib_Extlib_Unzip.mli: added alias [t = Unzip.t], [error_msg = Unzip.error_msg]
	* batlib_Baselib_Arg.mli: added alias [spec = Arg.spec]
	* batlib_Baselib_Big_int.mli: added alias [big_int = Big_int.big_int]
	* batlib_Baselib_Bigarray.mli: added plenty of aliases
	* batlib_Baselib_Buffer.mli: added alias
	* batlib_Baselib_CamlInternalMod.mli: added alias
	* batlib_Baselib_CamlInternalOO.mli: added aliases
	* batlib_Baselib_Condition.mli:
	* batlib_Baselib_Complex.mli: