@@ -1,38 +1,0 @@
-(*
- * Batlib_1 - Root of Batteries Included hierarchy, layer 1
- * Copyright (C) 2008 David Teller, LIFO, Universite d'Orleans
- * 
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version,
- * with the special exception on linking described in file LICENSE.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- *)
-
-(**
-   Base of OCaml Batteries Included.
-
-   @documents Batteries
-*)
-
-module Control     = Batlib_control
-module Data        = Batlib_data
-module Languages   = Batlib_languages
-module Meta        = Batlib_meta
-module Standard    = Batlib_standard
-module System      = Batlib_system
-module Toolchain   = Batlib_toolchain
-module Util        = Batlib_util
-
-(** / **)
-include Standard
-(** / **)
